<resources>
    <string name="app_name">Ambrosia</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_journal">Journal</string>
    <string name="title_hunger_scale">Hunger Scale</string>
    <string name="tasks_goals_header">Goal</string>
    <string name="tasks_tasks_header">Tasks</string>
    <string name="tasks_todo_list_empty">You\'ve completed all your tasks today!</string>
    <string name="tasks_completed_header">History</string>
    <string name="tasks_completed_list_empty">Your completed tasks will show up here!</string>
    <string name="task_item_journal"><![CDATA[<b>Journal:</b> %s]]></string>
    <string name="task_item_hunger_scale"><![CDATA[<b>Hunger Scale:</b> %s]]></string>
    <string name="task_item_action"><![CDATA[<b>Action:</b> %s]]></string>
    <string name="action">Action</string>
    <string name="task_dialog_hint">Optional: Reflect here…</string>
    <string name="task_dialog_mark_as_complete">Mark as complete</string>
    <string name="task_dialog_warning">You will not be able to undo this action after you “mark as complete”.</string>
    <string name="task">Task</string>
    <string name="quote_body">\"%s\"</string>
    <string name="quote_author">— %s, %s</string>
    <string name="prompt">Prompt</string>
    <string name="freestyle">Free Style</string>
    <string name="freestyle_description">Share how you feel in the moment.</string>
    <string name="freestyle_new">How do you feel right now?</string>
    <string name="start_typing_placeholder">Start typing…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="journal_empty_history">Your journal entries will show up here!</string>
    <string name="rate_your_hunger">Rate your hunger from 1 – 10</string>
    <string name="pair_with_last_entry">Pair with last entry</string>
    <string name="time">Time</string>
    <string name="notes">Food</string>
    <string name="notes_hint">Describe your meal or snack</string>
    <string name="log">Log</string>
    <string name="hs_empty_history">Your hunger scale entries will show up here!</string>
    <string name="starved">Starved</string>
    <string name="stuffed">Stuffed</string>
    <string name="got_it">Got it</string>
    <string name="how_to_use_header">How to use the hunger scale</string>
    <string name="how_to_use_instruction">Attempt to start eating when you feel you are at a 3 and stop eating at a 7. This range generally makes people feel the most comfortable.</string>
    <string name="scale">Scale</string>
    <string name="hs_level_1">Ravenous</string>
    <string name="hs_level_2">Extremely hungry</string>
    <string name="hs_level_3">Hungry</string>
    <string name="hs_level_4">“I could eat”</string>
    <string name="hs_level_5">Neutral</string>
    <string name="hs_level_6">Mild fullness</string>
    <string name="hs_level_7">Satisfied</string>
    <string name="hs_level_8">Slight discomfort</string>
    <string name="hs_level_9">Overstuffed</string>
    <string name="hs_level_10">Physically ill</string>
    <string name="help_conclusion">You can always tap the info icon on this page to access this info again!</string>
    <string name="ieas_full_name">Intuitive Eating Assessment Scale</string>
    <string name="ieas_full_instructions_1">This quiz will assess whether you are an Intuitive Eater, or perhaps where you might need some work.</string>
    <string name="ieas_full_instructions_2"><![CDATA[There will be <font color=%s>4 sections</font>, and you will see your results afterwards.]]></string>
    <string name="ieas_credit">Assessment adapted from Tracy Tylka</string>
    <string name="lets_go">Let\'s go</string>
    <string name="ieas_questions_instructions"><![CDATA[Select the ones that <i>mostly</i> apply:]]></string>
    <string name="next">Next</string>
    <string name="ieas_results_confirmation_dialog_header">Just to make sure</string>
    <string name="ieas_results_confirmation_dialog_label">By tapping complete, you will no longer be able to adjust your answers and you will be shown your results.</string>
    <string name="results">Results</string>
    <string name="results_explanation">Low percentages suggest areas that might need more work :)</string>
    <string name="back_to_home">Back to home</string>
    <string name="ieas_percentage"><![CDATA[%d<small>%%</small>]]></string>
    <string name="ieas_category_1">Unconditional permission to eat</string>
    <string name="ieas_category_2">Eating for physical rather than emotional reasons</string>
    <string name="ieas_category_3">Reliance on internal hunger and satiety cues</string>
    <string name="ieas_category_4">Body-food choice congruence</string>
    <string name="ieas_question_1">I try to avoid certain foods high in fat, carbs, or calories.</string>
    <string name="ieas_question_2">If I am craving a certain food, I don’t allow myself to have it.</string>
    <string name="ieas_question_3">I get mad at myself for eating something unhealthy.</string>
    <string name="ieas_question_4">I have forbidden foods that I don’t allow myself to eat. </string>
    <string name="ieas_question_5">I don’t allow myself to eat what food I desire at the moment.</string>
    <string name="ieas_question_6">I follow eating rules or diet plans that dictate what, when, and how to eat.</string>
    <string name="ieas_question_7">I find myself eating when I’m feeling emotional (e.g., anxious, depressed, sad), even when I’m not physically hungry.</string>
    <string name="ieas_question_8">I find myself eating when I am lonely, even when I’m not physically hungry.</string>
    <string name="ieas_question_9">I use food to help me soothe my negative emotions.</string>
    <string name="ieas_question_10">I find myself eating when I am stressed out, even when I’m not physically hungry.</string>
    <string name="ieas_question_11">I am not able to cope with my negative emotions (e.g., anxiety and sadness) without turning to food for comfort.</string>
    <string name="ieas_question_12">When I am bored, I eat just for something to do.</string>
    <string name="ieas_question_13">When I am lonely, I turn to food for comfort.</string>
    <string name="ieas_question_14">I find difficulty finding ways to cope with stress and anxiety, other than by eating.</string>
    <string name="ieas_question_15">I trust my body to tell me WHEN to eat.</string>
    <string name="ieas_question_16">I trust my body to tell me WHAT to eat.</string>
    <string name="ieas_question_17">I trust my body to tell me HOW MUCH to eat.</string>
    <string name="ieas_question_18">I rely on my hunger signals to tell me when to eat.</string>
    <string name="ieas_question_19">I rely on my fullness (satiety) signals to tell me when to stop eating.</string>
    <string name="ieas_question_20">I trust my body to tell me when to stop eating.</string>
    <string name="ieas_question_21">Most of the time, I desire to eat nutritious foods.</string>
    <string name="ieas_question_22">I mostly eat foods that make my body perform efficiently (well).</string>
    <string name="ieas_question_23">I mostly eat foods that give my body energy and stamina.</string>
    <string name="ambrosia_description">The tool for becoming the ultimate Intuitive Eater</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_credentials">Enter your email and password below.</string>
    <string name="email_placeholder">Email address</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_welcome_message_1"><![CDATA[To provide you with relevant tools in your Intuitive Eating journey, we will be using <i>machine learning</i> to create tailored tasks that will be updated each day.]]></string>
    <string name="sign_up_welcome_message_2">If you’re okay with this, please continue to the disclaimer!</string>
    <string name="ie_credit">Tools adapted from Evelyn Tribole and Elyse Resch’s model of Intuitive Eating</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_explanation">This app is not appropriate if you are experiencing symptoms of an eating disorder. Click here if you are not sure.</string>
    <string name="disclaimer_explanation_link">here</string>
    <string name="disclaimer_text">I do not experience having symptoms of an eating disorder and choose to continue using the app.</string>
    <string name="disclaimer_header">Please check off everything that applies to you:</string>
    <string name="scoff_item_1">Do you make yourself sick because you feel uncomfortably full?</string>
    <string name="scoff_item_2">Do you worry you have lost control over how much you eat?</string>
    <string name="scoff_item_3">Do you believe yourself to be fat when others say you are too thin?</string>
    <string name="scoff_item_4">Have you recently lost more than 14 pounds in a 3-month period?</string>
    <string name="scoff_item_5">Would you say that food dominates your life?</string>
    <string name="complete">Complete</string>
    <string name="disclaimer_results_header">We\'d really love to have you here…</string>
    <string name="disclaimer_results_text_1">We advise you for now not to use our app because we are unable to support you in the areas you indicated.</string>
    <string name="disclaimer_results_text_2">Please consult a dietitian or medical professional before further use.</string>
    <string name="exit_app">Exit App</string>
    <string name="hello_you_are_new">Hello, you\'re new!</string>
    <string name="create_credentials">Enter a valid email and a password that includes a symbol or a number and is 8 or more characters long.</string>
    <string name="password_placeholder">Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="done">Done</string>
    <string name="user_name_header">How would you like us to address you?</string>
    <string name="user_name_explanation">A first name or even a nickname works for us!</string>
    <string name="user_name_edit_text_hint">Name</string>
    <string name="user_age_header">What is your age?</string>
    <string name="user_age_explanation">A friendly reminder that we only use your age to personalize our tools to the stage in your life.</string>
    <string name="user_age_under_18">Under 18</string>
    <string name="user_age_between_18_and_25">Between 18 and 25</string>
    <string name="user_age_over_25">Over 25</string>
    <string name="user_goal_header">How can we help you feel your best?</string>
    <string name="user_goal_explanation">Select just one goal. We will create your first 12-week plan for you!</string>
    <string name="user_goal_1">I want to improve my ability to honour my hunger and satiation.</string>
    <string name="user_goal_2">I want to reintegrate foods that I fear to eat into my intake.</string>
    <string name="user_goal_3">I want to get better at detaching eating from emotional reasons.</string>
    <string name="user_goal_4">I want to learn to eat in a way that supports my physical health.</string>
    <string name="user_motivation_header">Tell us why</string>
    <string name="user_motivation_explanation_1">Research says that when you know your intentions, you’ve taken the 1st step to reaching your goal.</string>
    <string name="user_motivation_explanation_2">Tell us why you have chosen to embark on this journey with us.</string>
    <string name="user_motivation_edit_text_hint">Start typing…</string>
    <string name="today">Today</string>
    <string name="all">All</string>
</resources>