<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.projectambrosia.ambrosia.login.viewmodels.CollectUserInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundOrange"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_regular">

        <TextView
            android:id="@+id/user_age_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_age_header"
            android:textAppearance="@style/TextAppearance.PageHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_age_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/user_age_explanation"
            android:textAppearance="@style/TextAppearance.LargeBodyText"
            app:layout_constraintTop_toBottomOf="@id/user_age_header" />

        <RadioGroup
            android:id="@+id/user_age_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:checkedButton="@={viewModel.ageRadioButtonId}"
            app:layout_constraintTop_toBottomOf="@id/user_age_explanation">

            <RadioButton
                android:id="@+id/user_age_radio_button_1"
                style="@style/AmbrosiaAgeGroupRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radio_button_age_group"
                android:text="@string/user_age_under_18" />

            <RadioButton
                android:id="@+id/user_age_radio_button_2"
                style="@style/AmbrosiaAgeGroupRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radio_button_age_group"
                android:layout_marginTop="@dimen/spacing_regular"
                android:text="@string/user_age_between_18_and_25" />

            <RadioButton
                android:id="@+id/user_age_radio_button_3"
                style="@style/AmbrosiaAgeGroupRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radio_button_age_group"
                android:layout_marginTop="@dimen/spacing_regular"
                android:text="@string/user_age_over_25" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>