<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.projectambrosia.ambrosia.login.viewmodels.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundOrange"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_regular"
        android:paddingTop="?android:attr/actionBarSize"
        android:paddingEnd="@dimen/spacing_regular"
        android:paddingBottom="@dimen/spacing_regular"
        tools:context=".login.fragments.SignInFragment">

        <TextView
            android:id="@+id/sign_in_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.PageHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/enter_credentials"
            android:textAppearance="@style/TextAppearance.LargeBodyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_header" />

        <EditText
            android:id="@+id/create_account_email_edit_text"
            style="@style/AmbrosiaEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_regular"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account_text" />

        <EditText
            android:id="@+id/create_account_password_edit_text"
            style="@style/AmbrosiaEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_small"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account_email_edit_text" />

        <TextView
            android:id="@+id/sign_in_error_text"
            style="@style/TextAppearance.ErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/invalid_credentials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account_password_edit_text"
            app:set_invisible="@{true}"
            app:visibility_adapter="@{viewModel.error}" />

        <Button
            android:id="@+id/create_account_button"
            style="@style/AmbrosiaButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:onClick="@{() -> viewModel.onNext()}"
            android:text="@string/sign_in"
            app:enabled_inverted="@{viewModel.error}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>