<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_round_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ieas_results_confirmation_dialog_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/ieas_results_confirmation_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ieas_results_confirmation_dialog_header"
            android:textAppearance="@style/TextAppearance.PageHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ieas_results_confirmation_dialog_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/ieas_results_confirmation_dialog_label"
            android:textAppearance="@style/TextAppearance.LargeBodyText"
            app:layout_constraintTop_toBottomOf="@id/ieas_results_confirmation_dialog_header" />

        <Button
            android:id="@+id/ieas_results_confirmation_dialog_cancel_button"
            style="@style/AmbrosiaDialogSecondaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/secondary_button_height"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@id/ieas_results_confirmation_dialog_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ieas_results_confirmation_dialog_label" />

        <Button
            android:id="@+id/ieas_results_confirmation_dialog_complete_button"
            style="@style/AmbrosiaDialogPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/secondary_button_height"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ieas_results_confirmation_dialog_center"
            app:layout_constraintTop_toBottomOf="@id/ieas_results_confirmation_dialog_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>